--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Webdeveloper
+  uni: IPM
+  year: September, 2021 &mdash; June, 2023
   # awards:
-  # summary:
+  # summary: Web programmer in HTML, CSS, JavaScript, PHP, Java, NodeJS, React, Spring and Wordpress.
